tabshell-layout/src/main/resources/com/techsenger/tabshell/layout/pagehost/page-host.css
/*
 * Copyright 2024-2026 Pavel Castornii.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
    Author: Pavel Castornii
*/

.left-box {
    -fx-background-color: -color-bg-subtle;
}

.left-box > .tree-view,
.left-box > .tree-view .cell {
    -fx-background-color: transparent;
}

.left-box .tree-view > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected {
  -fx-background-color: -color-cell-border, -color-cell-bg-selected;
}

.left-box .tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected  {
  -fx-background-color: -color-cell-border, -color-cell-bg-selected-focused;
}

.right-box > .header-box > .breadcrumbs-box > .hyperlink ,
.right-box > .header-box > .breadcrumbs-box > .hyperlink:visited {
    -fx-text-fill: -color-fg-default;
}

.right-box > .header-box > .breadcrumbs-box .font-icon-view {
    -fx-font-size: 1.4em;
}

